GSnova Changelog
===================
Changes in version 0.19.3(2012.12.xx)
-------------------------------------------
** Features
   * [ALL]: Launch independent proxy server for GAE/C4/SSH without SPAC support
   
** Improvement
   * [GAE]: Better HTTP connection management
   * [C4]: Close failed connection much faster now
   * [SPAC]: Adaptive for some typo in config
   * Bug fix

Changes in version 0.19.2(2012.12.02)
-------------------------------------------
** Features
   * [SPAC]: Switch to apnic's IP repo
   
** Improvement
   * Change default spac setting
   * Bug fix

Changes in version 0.19.1(2012.11.24)
-------------------------------------------
** Features
   * [C4]:Close failed connection immediately
   
** Improvement
   * Change default spac setting

Changes in version 0.19.0(2012.11.23)
-------------------------------------------
** Features
   * [C4]:Refactor server&client, much faster now
   
** Improvement
   * Bug fix
   * Change default host & spac setting

Changes in version 0.18.4(2012.11.17)
-------------------------------------------
** Features
   * Modify some default spac rules
   * Add "Range" as attribute for SPAC's proxy
   
** Improvement
   * Bug fix

Changes in version 0.18.3(2012.11.10)
-------------------------------------------
** Features
   * Add icon for exe
   * Support path with domain  in C4 configuration
   * Enable DNS cache & Upgrade godns
   
   
** Improvement
   * Resolve most sites via trusted DNS(except C4)

Changes in version 0.18.1(2012.11.03)
-------------------------------------------
** Features
   * Add socks support for default listening port '48100'
   
** Improvement
   * Bug fix
   * Replace CRLF chars

Changes in version 0.17.2(2012.10.23)
-------------------------------------------
** Features
   * [SPAC]:Split spac script into cloud/user spac scripts
   * [Hosts]:Split hosts file into cloud/user hosts files
   * [GAE]:Upgrade snappy
   
** Improvement
   * Change default proxy setting to https.
