@@ -32,9 +32,5 @@
     "Protocol" : "https",
     "Host": ["twitter.com"],
     "Proxy": ["Default"]
-  },
-  {
-    "Filter" : ["!IsBlockedByGFW"],
-    "Proxy":["Direct", "Default"]
   }
 ]
